; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/advapi32/extr_lsa.c_get_sid_info.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/advapi32/extr_lsa.c_get_sid_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_sid_info.account = internal global [257 x i8] zeroinitializer, align 16
@get_sid_info.domain = internal global [257 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [29 x i8] c"LookupAccountSidA failed %u\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8**, i8**)* @get_sid_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_sid_info(i32 %0, i8** %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i8** %2, i8*** %6, align 8
  %11 = load i8**, i8*** %5, align 8
  store i8* getelementptr inbounds ([257 x i8], [257 x i8]* @get_sid_info.account, i64 0, i64 0), i8** %11, align 8
  %12 = load i8**, i8*** %6, align 8
  store i8* getelementptr inbounds ([257 x i8], [257 x i8]* @get_sid_info.domain, i64 0, i64 0), i8** %12, align 8
  store i32 257, i32* %8, align 4
  store i32 257, i32* %7, align 4
  store i8 0, i8* getelementptr inbounds ([257 x i8], [257 x i8]* @get_sid_info.domain, i64 0, i64 0), align 16
  store i8 0, i8* getelementptr inbounds ([257 x i8], [257 x i8]* @get_sid_info.account, i64 0, i64 0), align 16
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @LookupAccountSidA(i32* null, i32 %13, i8* getelementptr inbounds ([257 x i8], [257 x i8]* @get_sid_info.account, i64 0, i64 0), i32* %7, i8* getelementptr inbounds ([257 x i8], [257 x i8]* @get_sid_info.domain, i64 0, i64 0), i32* %8, i32* %9)
  store i32 %14, i32* %10, align 4
  %15 = load i32, i32* %10, align 4
  %16 = call i32 (...) @GetLastError()
  %17 = call i32 @ok(i32 %15, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %16)
  ret void
}

declare dso_local i32 @LookupAccountSidA(i32*, i32, i8*, i32*, i8*, i32*, i32*) #1

declare dso_local i32 @ok(i32, i8*, i32) #1

declare dso_local i32 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
